--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^2.3.4",
     "express": "^4.13.4",
     "johnny-five": "^0.9.18",
     "q": "^1.4.1"
